--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -18,25 +18,25 @@ general {
 
 
 # Day
-label {
-    monitor =
-    text = cmd[update:1000] echo -e "$(date +"%A",)"
-    color = rgba(216, 222, 233, 0.70)
-    font_size = 40
-    font_family = SF Pro Display Bold
-    position = -100, 150
-    halign = center
-    valign = center
-}
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo -e "$(date +"%A",)"
+#     color = rgba(216, 222, 233, 0.70)
+#     font_size = 40
+#     font_family = SF Pro Display Bold
+#     position = -150, 150
+#     halign = center
+#     valign = center
+# }
 
 # Date-Month
 label {
     monitor =
-    text = cmd[update:1000] echo -e "$(date +"%d %B")"
+    text = cmd[update:1000] echo -e "$(date +"%A, %d %B")"
     color = rgba(216, 222, 233, 0.70)
     font_size = 40
     font_family = SF Pro Display Bold
-    position = 160, 150
+    position = 0, 150
     halign = center
     valign = center
 }
